Implements the transcription list -Creates the component -Creates the service -Fix the header position

--- a/transcriptions/src/app/app.component.css
+++ b/transcriptions/src/app/app.component.css
@@ -1,2 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+.flex{
+    display: flex;
+    flex-direction: column;
+}
+.transcription-list {
+    background-color: #ffffff;
+    margin: 22px 143px 0 143px;
+}
