--- a/transcriptions/src/app/app.component.html
+++ b/transcriptions/src/app/app.component.html
@@ -1,1 +1,3 @@
-<ts-header></ts-header>
+<ts-header class="flex"></ts-header>
+
+<ts-transcription-list class="flex transcription-list"></ts-transcription-list>
