--- a/transcriptions/src/styles.css
+++ b/transcriptions/src/styles.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: #F6F7F8;
 }
 ol, ul {
 	list-style: none;
