Creates the button component -Adds buttons to the header component -Replaces the trash button to the button component

--- a/transcriptions/src/app/core/header/header.component.html
+++ b/transcriptions/src/app/core/header/header.component.html
@@ -1,5 +1,15 @@
 <header>
     <nav>
         <a href="#">Transcriptions</a>
+        <ts-button
+            t-type="upload"
+            t-height="24"
+            t-width="24">
+        </ts-button>
+        <ts-button
+            t-type='fetch'
+            t-height="24"
+            t-width="24">
+        </ts-button>
     </nav>
 </header>
