Creates the actions for the transcription list -Adds transcription actions -Refactoring in the app component

--- a/transcriptions/src/app/app.component.html
+++ b/transcriptions/src/app/app.component.html
@@ -1,3 +1,1 @@
-<ts-header class="flex"></ts-header>
-
-<ts-transcription-list class="flex transcription-list"></ts-transcription-list>
+<ts-home></ts-home> 
