--- a/transcriptions/src/app/core/header/header.component.html
+++ b/transcriptions/src/app/core/header/header.component.html
@@ -4,12 +4,14 @@
         <ts-button
             t-type="upload"
             t-height="24"
-            t-width="24">
+            t-width="24"
+            (t-click)="upload()">
         </ts-button>
         <ts-button
             t-type='fetch'
             t-height="24"
-            t-width="24">
+            t-width="24"
+            (t-click)="fetch()">
         </ts-button>
     </nav>
 </header>
