--- a/transcriptions/src/app/transcriptions/transcription-list/transcription-list.component.css
+++ b/transcriptions/src/app/transcriptions/transcription-list/transcription-list.component.css
@@ -1,3 +1,9 @@
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+}
+
 .list-item-first {
     border: 1px solid #eaedef;
 }
@@ -7,4 +13,13 @@
     border-style: solid;
     border-color:  #eaedef;
     margin-top: -1px;
+}
+
+ul {
+    background-color: #ffffff;
+}
+
+.center {
+    align-self: center;
+    justify-self:  center;
 }
