Creates the checkbox component

--- a/transcriptions/src/app/transcriptions/transcription-list/transcription/transcription.component.html
+++ b/transcriptions/src/app/transcriptions/transcription-list/transcription/transcription.component.html
@@ -1,6 +1,9 @@
 
 <section class="grid-container">
-    <input type="checkbox" id="checkbox">
+
+    <ts-checkbox
+     id="checkbox">
+    </ts-checkbox>
 
     <img src="assets/images/transcription/person.svg"  id="person-img">
 
