--- a/transcriptions/src/app/core/header/header.component.html
+++ b/transcriptions/src/app/core/header/header.component.html
@@ -2,6 +2,7 @@
     <nav>
         <a href="#">Transcriptions</a>
         <ts-button
+            class="margin-right"
             t-type="upload"
             t-height="24"
             t-width="24"
