--- a/transcriptions/src/app/transcriptions/transcription-list/transcription-list.component.html
+++ b/transcriptions/src/app/transcriptions/transcription-list/transcription-list.component.html
@@ -12,7 +12,7 @@
     </li>
   </ul>
 
-  <div class="center">
+  <div class="center margin-top">
       <ts-button
         t-type="add"
         t-heigh="32"
